--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -25,9 +25,10 @@
 
         <label for="role">Роль:</label>
         <select name="role" id="role" required>
-            <option value="студент">Студент</option>
-            <option value="администратор">Администратор</option>
+            <option value="Cтудент">Студент</option>
+            <option value="Администратор">Администратор</option>
             <option value="Специалист дирекции">Специалист дирекции</option>
+            <option value="Преподаватель">Преподаватель</option>
         </select><br>
 
         <button type="submit">Зарегистрироваться</button>
