--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Вход</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
-    <header>
-        <h1>Вход в систему</h1>
-    </header>
+{% extends "layout.html" %}
+
+{% block title %}Вход{% endblock %}
+
+{% block content %}
+    <h2>Вход в систему</h2>
     <form action="/login" method="POST">
         <div>
             <label for="login">Логин:</label>
@@ -21,6 +15,6 @@
         </div>
         <button type="submit">Войти</button>
     </form>
+    <br>
     <a href="/register">Регистрация</a>
-</body>
-</html>
+{% endblock %}
