--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -39,7 +39,7 @@
 
         <label for="role">Роль:</label>
         <select name="role" id="role" required>
-            <option value="Cтудент">Студент</option>
+            <option value="Студент">Студент</option>
             <option value="Администратор">Администратор</option>
             <option value="Специалист дирекции">Специалист дирекции</option>
             <option value="Преподаватель">Преподаватель</option>
