--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,27 @@
-{% extends "layout.html" %}
-
-{% block title %}Запись на дисциплины{% endblock %}
+{% extends 'layout.html' %}
 
 {% block content %}
-    <h1>Запись на дисциплины по выбору</h1>
-    <p>Добро пожаловать, {{ user.fio }}!</p>
+<h2>Доступные дисциплины по выбору</h2>
 
-    <p>Здесь вы можете выбрать дисциплины для изучения.</p>
+<form action="{{ url_for('logout') }}" method="get">
+    <button type="submit">Выйти</button>
+</form>
 
-    <!-- Здесь позже можно будет вывести список доступных дисциплин -->
-    
-    <a href="{{ url_for('logout') }}">Выйти</a>
+<p>ФИО: {{ user.fio }}</p>
+<p>Группа: {{ user.group_number }}</p>
+<p>Курс: {{ user.group_number[2] }}</p>
+
+{% if error %}
+    <p style="color: red;">{{ error }}</p>
+{% endif %}
+
+{% if elective_courses %}
+    <ul>
+        {% for course in elective_courses %}
+            <li>{{ course.name }} (Семестр {{ course.semester }})</li>
+        {% endfor %}
+    </ul>
+{% else %}
+    <p>Нет доступных дисциплин для вашего курса и направления.</p>
+{% endif %}
 {% endblock %}
