--- a/app/templates/reports.html
+++ b/app/templates/reports.html
@@ -30,6 +30,6 @@
 
     <br>
     <a href="{{ url_for('manage_courses_bp.manage_courses') }}">Управление дисциплинами</a><br>
-    <a href="{{ url_for('manage_students_courses') }}">Управление студентами и дисциплинами</a><br>
+    <a href="{{ url_for('student_courses.student_courses') }}">Управление студентами и дисциплинами</a><br>
     <a href="{{ url_for('logout') }}">Выйти</a>
 {% endblock %}
