--- a/app/templates/director_dashboard.html
+++ b/app/templates/director_dashboard.html
@@ -7,7 +7,7 @@
 
     <a href="{{ url_for('manage_courses_bp.manage_courses') }}">Управление дисциплинами</a><br>
     <a href="{{ url_for('student_courses.student_courses') }}">Управление студентами и дисциплинами</a><br>
-    <a href="{{ url_for('reports') }}">Отчеты</a><br>
+    <a href="{{ url_for('reports_bp.generate_reports') }}">Сгенерировать отчет</a>
 
     <a href="{{ url_for('logout') }}">Выйти</a>
 {% endblock %}
