--- a/app/templates/manage_students_courses.html
+++ b/app/templates/manage_students_courses.html
@@ -71,7 +71,7 @@
     </form>
 
     <br>
-    <a href="{{ url_for('reports') }}">Отчеты</a><br>
+    <a href="{{ url_for('reports_bp.generate_reports') }}">Сгенерировать отчет</a>
     <a href="{{ url_for('director_dashboard') }}">Панель управления</a><br>
     <a href="{{ url_for('manage_courses_bp.manage_courses') }}">Управление дисциплинами</a><br>
     <a href="{{ url_for('logout') }}">Выйти</a>
