--- a/app/templates/choose_courses.html
+++ b/app/templates/choose_courses.html
@@ -45,5 +45,5 @@
 </form>
 
 <a href="{{ url_for('logout') }}">Выйти</a>
-<a href="{{ url_for('student_courses.student_courses') }}">Назад</a>
+<!-- <a href="{{ url_for('student_courses.student_courses') }}">Назад</a>-->
 {% endblock %}
