--- a/app/templates/director_dashboard.html
+++ b/app/templates/director_dashboard.html
@@ -1,3 +1,4 @@
+{% extends 'layout.html' %}
 {% block title %}Панель управления специалиста дирекции{% endblock %}
 
 {% block content %}
@@ -6,7 +7,7 @@
     <p>Добро пожаловать, {{ user.fio }}!</p>
 
     <a href="{{ url_for('manage_courses_bp.manage_courses') }}">Управление дисциплинами</a><br>
-    <a href="{{ url_for('student_courses.student_courses') }}">Управление студентами и дисциплинами</a><br>
+    <a href="{{ url_for('manage_students_courses') }}">Управление студентами и дисциплинами</a><br>
     <a href="{{ url_for('reports_bp.generate_reports') }}">Сгенерировать отчет</a>
 
     <a href="{{ url_for('logout') }}">Выйти</a>
