--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,6 +14,7 @@
             <input type="password" id="password" name="password" required>
         </div>
         <button type="submit">Войти</button>
+        <button type="button" onclick="window.location.href='http://localhost:3000/'">Назад</button>
     </form>
     <br>
     <a href="/register">Регистрация</a>
